--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="target/xtend-gen/main"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="target/xtend-gen/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
@@ -14,7 +15,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry including="**/*.java" kind="src" path="src"/>
 	<classpathentry kind="src" output="target/test-classes" path="src-test">
 		<attributes>
 			<attribute name="optional" value="true"/>
