--- a/pom.xml
+++ b/pom.xml
@@ -31,23 +31,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.eclipse.xtend</groupId>
-				<artifactId>xtend-maven-plugin</artifactId>
-				<version>2.7.3</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>testCompile</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/xtend-gen/main</outputDirectory>
-							<testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -65,12 +48,12 @@
 		<dependency>
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
-			<version>2.7.3</version>
+			<version>2.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.core</artifactId>
-			<version>2.7.3</version>
+			<version>2.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -89,6 +72,16 @@
 			<artifactId>mockito-core</artifactId>
 			<version>2.0.5-beta</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.tfr.thesis</groupId>
+			<artifactId>active_annotation.model</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>de.tfr.thesis</groupId>
+			<artifactId>active_annotations</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
