--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
 	<groupId>de.tfr.thesis</groupId>
 	<artifactId>active_annotations.test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<sourceDirectory>xtend-gen</sourceDirectory>
 		<testSourceDirectory>src-test</testSourceDirectory>
@@ -45,15 +48,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.hamcrest</groupId> -->
+		<!-- <artifactId>hamcrest-junit</artifactId> -->
+		<!-- <version>2.0.0.0</version> -->
+		<!-- </dependency> -->
 		<dependency>
-			<groupId>org.eclipse.xtend</groupId>
-			<artifactId>org.eclipse.xtend.lib</artifactId>
-			<version>2.8.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.xtend</groupId>
-			<artifactId>org.eclipse.xtend.core</artifactId>
-			<version>2.8.1</version>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -61,12 +64,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.github.oehme.xtend</groupId>
-			<artifactId>xtend-junit</artifactId>
-			<version>0.0.2</version>
-			<scope>test</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.github.oehme.xtend</groupId> -->
+<!-- 			<artifactId>xtend-junit</artifactId> -->
+<!-- 			<version>0.0.2</version> -->
+<!-- 			<scope>test</scope> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
@@ -82,6 +85,11 @@
 			<groupId>de.tfr.thesis</groupId>
 			<artifactId>active_annotations</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.xtend</groupId>
+			<artifactId>org.eclipse.xtend.core</artifactId>
+			<version>2.9.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
