--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<xtend.version>2.8.2</xtend.version>
 	</properties>
 	<build>
 		<sourceDirectory>xtend-gen</sourceDirectory>
@@ -89,7 +90,7 @@
 		<dependency>
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.core</artifactId>
-			<version>2.9.0-SNAPSHOT</version>
+			<version>${xtend.version}</version>
 		</dependency>
 	</dependencies>
 </project>
